--- a/deploybooks/main/platforms/basestation.plt.yaml
+++ b/deploybooks/main/platforms/basestation.plt.yaml
@@ -9,6 +9,7 @@
 
   # setup docker context
   - export DCTX=default
+  - export SCENARIOS_PLATFORM=basestation
 
   # extend the basestation workspace
   - +extend: workspaces/basestation
