update to robot context params
 - testing deployer params for uav

--- a/deploybooks/env/platform.header.env.yaml
+++ b/deploybooks/env/platform.header.env.yaml
@@ -8,7 +8,7 @@
 
     elif [ ${INFRASTRUCTURE_SYSTEM} = "robot" ]; then
       if [ ${PLATFORM} = "uav" ]; then
-        export DCTX=robot-uav-$ROBOT_COMPUTER;
+        export DCTX=robot-uav-$UAV_COMPUTER;
       else
         export DCTX=robot-$ROBOT-$ROBOT_COMPUTER;
       fi
