--- a/scenarios/transfer/ugv.env
+++ b/scenarios/transfer/ugv.env
@@ -23,7 +23,7 @@ dir_empty() {
 if  dir_exists $SUBT_PATH/ugv \
     && dir_exists $SUBT_PATH/ugv/slam \
     && ! dir_empty $SUBT_PATH/ugv/slam/laser_odometry  ; then
-  echo "UGV Slam directory is not empty, transferring.";
+  POST_TRANSFER_SETUPS_WARNINGS="UGV Slam directory is not empty, transferring.";
 else
   # append slam transfer, exclude option
   export deploy_rsync_opts="$deploy_rsync_opts
