--- a/deploybooks/workspaces/ugv.ppc.yaml
+++ b/deploybooks/workspaces/ugv.ppc.yaml
@@ -7,7 +7,7 @@
     - export SERVICE=core
 
     # setup pre-defined environment variables, for workspace env import
-    - +env:DOCKER_CONTAINER=$ROBOT-ppc-shell
+    - +env:DOCKER_CONTAINER=$ROBOT-core-shell
 
     # import the workspace environment setup
     - set_workspace_configuration
