--- a/scenarios/.docker.env
+++ b/scenarios/.docker.env
@@ -54,6 +54,7 @@ export BASESTATION_WS="$DEPLOY_WS_PREFIX/basestation/launch/setup.bash"
 export PERCEPTION_WS="$DEPLOY_WS_PREFIX/perception/launch/setup.bash"
 export UGV_PPC_WS_SOURCE="$DEPLOY_WS_PREFIX/ugv/ppc/launch/setup.bash"
 export UGV_NUC_WS_SOURCE="$DEPLOY_WS_PREFIX/ugv/nuc/launch/setup.bash"
+export UGV_XAVIER_WS_SOURCE="$DEPLOY_WS_PREFIX/perception/launch/setup.bash"
 export UGV_SLAM_WS_SOURCE="$DEPLOY_WS_PREFIX/ugv/slam/launch/setup.bash"
 export UGV_SIM_WS_SOURCE="$DEPLOY_WS_PREFIX/ugv/launch/setup.bash"
 export UGV_PERCEPTION_WS_SOURCE="$DEPLOY_WS_PREFIX/ugv/perception/launch/setup.bash"
