--- a/scenarios/systems/robot/basestation.env
+++ b/scenarios/systems/robot/basestation.env
@@ -17,3 +17,19 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 
 # export the scenario file
 export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
+
+# Setup the bashrc roscore environment variables
+# ugly -- for now...
+if [[ "$(hostname)" == "system76-pc" ]]; then
+    echo "using basestation b1"
+    export ROS_MASTER_IP=$basestation_ip
+    export ROS_HOSTNAME="system76-pc"
+    export basestation_hostname="system76-pc"
+elif [[ "$(hostname)" == "b2" ]]; then
+    echo "using basestation b2"
+    export ROS_MASTER_IP=$basestation_ip2
+    export ROS_HOSTNAME="b2"
+    export basestation_hostname="b2"
+else
+    echo "Something went wrong";
+fi
