--- a/scenarios/systems/robot/ugv.nuc.env
+++ b/scenarios/systems/robot/ugv.nuc.env
@@ -32,6 +32,7 @@ export deploy_rsync_opts="$deploy_rsync_opts
 
 export skel_deploy_rsync_opts="
   $skel_deploy_rsync_opts
+  --exclude=*.git/
   --exclude=src/ugv/planning-pc
   --exclude=src/uav/"
 
