--- a/scenarios/systems/robot/ugv.ppc.env
+++ b/scenarios/systems/robot/ugv.ppc.env
@@ -17,7 +17,7 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 
 # Setup the bashrc roscore environment variables
 export ROS_MASTER_IP=${ROBOT}
-export ROS_HOSTNAME=${ppc_hostname}
+export ROS_HOSTNAME=${ROBOT}
 
 # deployer, configuration to ssh into the remote host (basestation, ssh)
 export deploy_remote_username=$ppc_deploy_remote_username
