--- a/scenarios/transfer/perception.env
+++ b/scenarios/transfer/perception.env
@@ -15,14 +15,7 @@ export deploy_rsync_opts="
   --exclude=src/ugv/
   --exclude=src/uav/
   --exclude=src/simulation
-  --exclude=src/common/communication_manager/third-party
-  --exclude=src/.git/modules/basestation/
-  --exclude=src/.git/modules/simulation/
-  --exclude=src/.git/modules/ugv/
-  --exclude=src/.git/modules/uav/
-  --exclude=src/.git/modules/common/modules/communication_manager/lfs/
-  --exclude=src/.git/modules/perception/lfs/
-  --exclude=src/.git/modules/perception/modules/objdet/object_detection/lfs"
+  --exclude=src/common/communication_manager/third-party"
 
 export skel_deploy_rsync_opts="
   $deploy_rsync_opts
