--- a/deploybooks/main/platforms/ugv.xavier.plt.yaml
+++ b/deploybooks/main/platforms/ugv.xavier.plt.yaml
@@ -1,5 +1,6 @@
 - xavier:
   - export ROBOT_COMPUTER=xavier;
+  - +env:ROBOT_COMPUTER=xavier
 
   # run on the remote server (except for any books that specific +local, to force local deployment)
   - +ssh:{ $ROBOT.$ROBOT_COMPUTER }
