--- a/scenarios/.ip_robots.env
+++ b/scenarios/.ip_robots.env
@@ -12,6 +12,7 @@ export ROS_hostname="rosmaster-hostname"
 
 # ugv basestation
 export basestation_ip="10.3.1.1"
+export basestation_ip2="10.3.1.2"
 export basestation_hostname="basestation"
 
 # uav basestation
