--- a/scenarios/systems/robot/ugv.xavier.env
+++ b/scenarios/systems/robot/ugv.xavier.env
@@ -13,7 +13,7 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 . ${SOURCED_FILE_PATH}/../../transfer/ugv.env
 
 # source the robot IP and hostname configuration
-. ${SOURCED_FILE_PATH}/../../.shared.env xavier ugv.xavier
+. ${SOURCED_FILE_PATH}/../../.shared.env ${ROBOT} ugv.xavier
 
 # Setup the bashrc roscore environment variables
 export ROS_MASTER_IP=${ROBOT}
