--- a/scenarios/systems/robot/basestation.env
+++ b/scenarios/systems/robot/basestation.env
@@ -22,14 +22,25 @@ export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
 # ugly -- for now...
 if [[ "$(hostname)" == "system76-pc" ]]; then
     echo "using basestation b1"
-    export ROS_MASTER_IP=$basestation_ip
-    export ROS_HOSTNAME="system76-pc"
-    export basestation_hostname="system76-pc"
+    export ROS_MASTER_IP=$basestation1_ip
+    export ROS_HOSTNAME=$basestation1_hostname
+
+    export basestation_hostname=$basestation1_hostname
+    export basestation_ip=$basestation1_ip
 elif [[ "$(hostname)" == "b2" ]]; then
     echo "using basestation b2"
-    export ROS_MASTER_IP=$basestation_ip2
-    export ROS_HOSTNAME="b2"
-    export basestation_hostname="b2"
+    export ROS_MASTER_IP=$basestation2_ip
+    export ROS_HOSTNAME=$basestation2_hostname
+
+    export basestation_hostname=$basestation2_hostname
+    export basestation_ip=$basestation2_ip
+elif [[ "$(hostname)" == "b3" ]]; then
+    echo "using basestation b3"
+    export ROS_MASTER_IP=$basestation3_ip
+    export ROS_HOSTNAME=$basestation3_hostname
+
+    export basestation_hostname=$basestation3_hostname
+    export basestation_ip=$basestation3_ip
 else
     echo "Something went wrong";
 fi
