change nuc ugv2 rosmaster, cannot ping ugv2, can ping ppc

--- a/scenarios/systems/robot/ugv.xavier.env
+++ b/scenarios/systems/robot/ugv.xavier.env
@@ -16,7 +16,7 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 . ${SOURCED_FILE_PATH}/../../.shared.env ${ROBOT} ugv.xavier
 
 # Setup the bashrc roscore environment variables
-export ROS_MASTER_IP=${ROBOT}
+export ROS_MASTER_IP=${ppc_ip}
 export ROS_HOSTNAME=${xavier_hostname}
 
 # deployer, configuration to ssh into the remote host (basestation, ssh)
