--- a/scenarios/systems/robot/ugv.nuc.env
+++ b/scenarios/systems/robot/ugv.nuc.env
@@ -16,7 +16,7 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 . ${SOURCED_FILE_PATH}/../../.shared.env ${ROBOT} ugv.nuc
 
 # Setup the bashrc roscore environment variables
-export ROS_MASTER_IP=${ROBOT}
+export ROS_MASTER_IP=${ppc_ip}
 export ROS_HOSTNAME=${nuc_hostname}
 
 # deployer, configuration to ssh into the remote host (basestation, ssh)
