--- a/scenarios/systems/robot/basestation.env
+++ b/scenarios/systems/robot/basestation.env
@@ -41,6 +41,13 @@ elif [[ "$(hostname)" == "b3" ]]; then
 
     export basestation_hostname=$basestation3_hostname
     export basestation_ip=$basestation3_ip
+elif [[ "$(hostname)" == "lordpradhan-Zephyrus" ]]; then
+    echo "using basestation lordpradhan-Zephyrus"
+    export ROS_MASTER_IP=$roshan_ip
+    export ROS_HOSTNAME=$roshan_hostname
+
+    export basestation_hostname=$roshan_hostname
+    export basestation_ip=$roshan_ip
 else
     echo "Something went wrong";
 fi
