--- a/scenarios/transfer/basestation.env
+++ b/scenarios/transfer/basestation.env
@@ -19,6 +19,7 @@ export deploy_rsync_opts="
   --exclude=src/basestation/.catkin_tools/
   --exclude=src/common/.catkin_tools/
   --exclude=src/subt_launch/.catkin_tools/
+  --exclude=src/operations/azurebooks/subt/.terraform/
   "
 export skel_deploy_rsync_opts="
   $deploy_rsync_opts
