--- a/scenarios/transfer/perception.env
+++ b/scenarios/transfer/perception.env
@@ -15,6 +15,7 @@ export deploy_rsync_opts="
   --exclude=src/ugv/
   --exclude=src/uav/
   --exclude=src/simulation
+  --exclude=src/operations/azurebooks/subt/.terraform/
   --exclude=src/common/communication_manager/third-party"
 
 export skel_deploy_rsync_opts="
