--- a/scenarios/transfer/uav.env
+++ b/scenarios/transfer/uav.env
@@ -13,6 +13,7 @@ export deploy_rsync_opts="
   --exclude=src/ugv/
   --exclude=src/.git/modules/ugv/
   --exclude=src/simulation/subt_gazebo/models/
+  --exclude=src/operations/azurebooks/subt/.terraform/
   --include=src/simulation/.catkin_tools/profiles/**/config.yaml
   --include=src/uav/.catkin_tools/profiles/**/config.yaml"
 
