--- a/scenarios/transfer/ugv.env
+++ b/scenarios/transfer/ugv.env
@@ -43,7 +43,8 @@ export deploy_rsync_opts="
   --exclude=src/simulation/
   --exclude=src/operations/deploy/docker/dockerfiles/thirdparty-software
   --exclude=src/ugv/planning-pc/ray_caster/bags/
-  --exclude=src/operations/docker/dockerfiles/thirdparty-software/"
+  --exclude=src/operations/docker/dockerfiles/thirdparty-software/
+  --exclude=src/operations/azurebooks/subt/.terraform/"
 
 export skel_deploy_rsync_opts="
   $deploy_rsync_opts
