--- a/ansiblebooks/tasks/docker.yaml
+++ b/ansiblebooks/tasks/docker.yaml
@@ -122,17 +122,15 @@
       path:  "~/.{{ project_name }}/user_config.bash"
     register: stat_result
 
-  # TODO: fix, sometimes errors
-  # update the user config, for using nvidia driver
-  - name: Set default subtrc user nvidia configuration (true)
-    shell: sed -i 's/USE_NVIDIA_DRIVER=true/USE_NVIDIA_DRIVER={{ install_nvidia_docker }}/' "~/.{{ project_name }}/user_config.bash"
-    when: stat_result.stat.exists
-
-  # TODO: fix, sometimes errors
-  # update the user config, for using nvidia driver
-  - name: Set default subtrc user nvidia configuration (false)
-    shell: sed -i 's/USE_NVIDIA_DRIVER=false/USE_NVIDIA_DRIVER={{ install_nvidia_docker }}/' "~/.{{ project_name }}/user_config.bash"
-    when: stat_result.stat.exists
+  - name: Set default subtrc user nvidia configuration
+    lineinfile:
+      path: "~/.{{ project_name }}/user_config.bash"
+      regexp: '^(.*)USE_NVIDIA_DRIVER(.*)$'
+      line: "export USE_NVIDIA_DRIVER={{ install_nvidia_docker }}"
+      backrefs: yes
+    when: >
+      "localhost" in inventory_hostname or
+      "basestation" in inventory_hostname
 
   - name: prune docker network
     shell: docker network prune -f
