update to local uav, perception setup

--- a/deploybooks/workspaces/uav.simulation.yaml
+++ b/deploybooks/workspaces/uav.simulation.yaml
@@ -30,6 +30,7 @@
       - +extend: catkin/subt_launch
 
   - perception:
+    - export SCENARIOS_PLATFORM=uav.perception
     - +extend: workspaces/shared/perception
 
   - wifi:
