--- a/scenarios/systems/local/uav.perception.env
+++ b/scenarios/systems/local/uav.perception.env
@@ -13,7 +13,17 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 . ${SOURCED_FILE_PATH}/../../.shared.env ${1} perception
 
 # export the docker base image
-[ ! -z "$2" ] && export DOCKER_BASE_IMAGE_PROJECT=${2}
+[ ! -z "$2" ] && export DOCKER_BASE_IMAGE_PROJECT=uav
+
+# override shared parameters -- ugly (all this needs to be cleaned up)
+export ROBOT=${1}
+export ROBOT_IP_NAME=$(eval echo ${1}_perception_ip)
+export ROBOT_ROS_MASTER_IP=$(eval echo "${!ROBOT_IP_NAME}")
+export ROS_MASTER_IP=${ROBOT_ROS_MASTER_IP}
+export ROS_HOSTNAME=${1}_perception
+export DOCKER_IMAGE_NAME=subt/${COMPUTER_ARCH}.uav.${DOCKER_IMAGE_ARCH}.${DOCKER_COMPOSE_IMAGE_SHORT_NAME}:${DOCKER_IMAGE_TAG}
+export CHILD_DOCKER_COMPOSE="uav.${DOCKER_COMPOSE_INFRASTRUCTURE_TYPE}.yml"
 
 # export the current sourced scenario file
 export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
+
