--- a/ansiblebooks/inventory/ssh-robot.cfg
+++ b/ansiblebooks/inventory/ssh-robot.cfg
@@ -77,6 +77,23 @@ Host robot-ugv3-xavier
   IdentityFile ~/.ssh/deploy
   ProxyJump robot-ugv3-ppc
 
+# == Spot1 ==
+
+Host robot-spot1-nuc
+  HostName spot-nuc-001
+  User subt
+  StrictHostKeyChecking no
+  IdentitiesOnly yes
+  IdentityFile ~/.ssh/deploy
+
+Host robot-spot1-xavier
+  HostName spot-xavier-001
+  User capsa
+  StrictHostKeyChecking no
+  IdentitiesOnly yes
+  IdentityFile ~/.ssh/deploy
+  ProxyJump robot-spot1-nuc
+
 # == UAVs ==
 
 Host robot-uav-ds1
