--- a/ansiblebooks/install-uav.yaml
+++ b/ansiblebooks/install-uav.yaml
@@ -1,6 +1,7 @@
 
 # Install basic dependencies on the remote VM
 - include: tasks/robothost.yaml
+- include: tasks/hosts.yaml
 
 # Install docker & docker-tools on the remote VM
 - include: tasks/docker.yaml
