--- a/ansiblebooks/inventory/robot.ini
+++ b/ansiblebooks/inventory/robot.ini
@@ -16,6 +16,10 @@ robot-ugv3-ppc
 robot-ugv3-nuc
 robot-ugv3-xavier
 
+[spot]
+robot-spot1-nuc
+robot-spot1-xavier
+
 [uav]
 robot-uav-ds1
 robot-uav-ds2
@@ -66,6 +70,14 @@ ansible_ssh_user=nuc
 
 [robot-ugv3-xavier:vars]
 ansible_ssh_user=xavier
+
+# == Spot1 ==
+
+[robot-spot1-nuc:vars]
+ansible_ssh_user=subt
+
+[robot-spot1-xavier:vars]
+ansible_ssh_user=capsa
 
 # == UAVs ==
 
