fixing typos for spot configs

--- a/ansiblebooks/inventory/ssh-robot.cfg
+++ b/ansiblebooks/inventory/ssh-robot.cfg
@@ -80,14 +80,14 @@ Host robot-ugv3-xavier
 # == Spot1 ==
 
 Host robot-spot1-nuc
-  HostName spot-nuc-001
+  HostName spot1-nuc
   User subt
   StrictHostKeyChecking no
   IdentitiesOnly yes
   IdentityFile ~/.ssh/deploy
 
 Host robot-spot1-xavier
-  HostName spot-xavier-001
+  HostName spot1-xavier
   User capsa
   StrictHostKeyChecking no
   IdentitiesOnly yes
